@@ -11,7 +11,7 @@ services:
 
   paramconverter.search_api:
     class: Drupal\search_api\ParamConverter\SearchApiConverter
-    arguments: ['@entity.manager', '@user.shared_tempstore', '@current_user']
+    arguments: ['@entity.manager', '@tempstore.shared', '@current_user']
     tags:
       - { name: paramconverter, priority: 10 }
     lazy: true
